重构 Config、优化代码实现